--- a/vote/Cargo.toml
+++ b/vote/Cargo.toml
@@ -21,6 +21,7 @@ dev-context-only-utils = ["dep:rand", "dep:bincode"]
 frozen-abi = ["dep:solana-frozen-abi", "dep:solana-frozen-abi-macro"]
 
 [dependencies]
+alpenglow-vote = { workspace = true }
 bincode = { workspace = true, optional = true }
 itertools = { workspace = true }
 log = { workspace = true }
@@ -40,6 +41,7 @@ solana-hash = { workspace = true }
 solana-instruction = { workspace = true }
 solana-keypair = { workspace = true }
 solana-packet = { workspace = true }
+solana-program = { workspace = true }
 solana-pubkey = { workspace = true }
 solana-sdk-ids = { workspace = true }
 solana-serialize-utils = { workspace = true }
