--- a/programs/stake/Cargo.toml
+++ b/programs/stake/Cargo.toml
@@ -18,6 +18,7 @@ name = "solana_stake_program"
 
 [dependencies]
 agave-feature-set = { workspace = true }
+alpenglow-vote = { workspace = true }
 bincode = { workspace = true }
 log = { workspace = true }
 solana-account = { workspace = true }
