Ingest replayed Alpenglow votes into cert pool (#107)
Co-authored-by: carllin <carl@anza.xyz>

--- a/runtime-transaction/Cargo.toml
+++ b/runtime-transaction/Cargo.toml
@@ -21,6 +21,7 @@ dev-context-only-utils = ["solana-compute-budget-instruction/dev-context-only-ut
 
 [dependencies]
 agave-transaction-view = { workspace = true }
+alpenglow-vote = { workspace = true }
 log = { workspace = true }
 solana-compute-budget = { workspace = true }
 solana-compute-budget-instruction = { workspace = true }
