feat: auto-build alpenglow-vote (#108)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ members = [
     "bench-vote",
     "bloom",
     "bucket_map",
+    "build-alpenglow-vote",
     "builtins",
     "builtins-default-costs",
     "cargo-registry",
@@ -174,7 +175,7 @@ used_underscore_binding = "deny"
 
 [workspace.dependencies]
 Inflector = "0.11.4"
-alpenglow-vote = { git = "ssh://git@github.com/solana-program/alpenglow-vote.git", rev = "96f8d34" }
+alpenglow-vote = { git = "ssh://git@github.com/solana-program/alpenglow-vote.git", rev = "f5bbc58" }
 # alpenglow-vote = { path = "../alpenglow-vote/program" }
 aes-gcm-siv = "0.11.1"
 agave-banking-stage-ingress-types = { path = "banking-stage-ingress-types", version = "=3.0.0" }
@@ -393,6 +394,7 @@ solana-bn254 = "2.2.2"
 solana-borsh = "2.2.1"
 solana-bpf-loader-program = { path = "programs/bpf_loader", version = "=3.0.0" }
 solana-bucket-map = { path = "bucket_map", version = "=3.0.0" }
+solana-build-alpenglow-vote = { path = "build-alpenglow-vote" }
 solana-builtins = { path = "builtins", version = "=3.0.0" }
 solana-builtins-default-costs = { path = "builtins-default-costs", version = "=3.0.0" }
 solana-clap-utils = { path = "clap-utils", version = "=3.0.0" }
