--- a/perf/Cargo.toml
+++ b/perf/Cargo.toml
@@ -35,6 +35,7 @@ frozen-abi = [
 
 [dependencies]
 ahash = { workspace = true }
+alpenglow-vote = { workspace = true }
 bincode = { workspace = true }
 bv = { workspace = true, features = ["serde"] }
 bytes = { workspace = true, features = ["serde"] }
