--- a/local-cluster/Cargo.toml
+++ b/local-cluster/Cargo.toml
@@ -23,6 +23,7 @@ rand = { workspace = true }
 rayon = { workspace = true }
 solana-account = { workspace = true }
 solana-accounts-db = { workspace = true }
+solana-build-alpenglow-vote = { workspace = true }
 solana-client = { workspace = true }
 solana-client-traits = { workspace = true }
 solana-clock = { workspace = true }
