--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ members = [
     "bench-tps",
     "bench-vote",
     "bloom",
+    "bls",
     "bucket_map",
     "build-alpenglow-vote",
     "builtins",
@@ -216,6 +217,8 @@ bencher = "0.1.5"
 bincode = "1.3.3"
 bitflags = { version = "2.9.1" }
 blake3 = "1.8.2"
+blst = "0.3.14"
+blstrs = "0.7.1"
 borsh = { version = "1.5.7", features = ["derive", "unstable__schema"] }
 borsh0-10 = { package = "borsh", version = "0.10.3" }
 bs58 = { version = "0.5.1", default-features = false }
@@ -264,6 +267,7 @@ etcd-client = "0.11.1"
 fast-math = "0.1"
 fd-lock = "3.0.13"
 five8_const = "0.1.4"
+ff = "0.13.1"
 flate2 = "1.0.31"
 fnv = "1.0.7"
 fs_extra = "1.3.0"
@@ -274,6 +278,7 @@ gethostname = "0.2.3"
 getrandom = "0.3.3"
 goauth = "0.13.1"
 governor = "0.6.3"
+group = "0.13.0"
 hex = "0.4.3"
 hidapi = { version = "2.6.3", default-features = false }
 histogram = "0.6.9"
@@ -381,6 +386,7 @@ solana-account-decoder-client-types = { path = "account-decoder-client-types", v
 solana-account-info = "2.3.0"
 solana-accounts-db = { path = "accounts-db", version = "=3.0.0" }
 solana-address-lookup-table-interface = "2.2.2"
+solana-address-lookup-table-program = { path = "programs/address-lookup-table", version = "=2.3.0" }
 solana-atomic-u64 = "2.2.1"
 solana-banks-client = { path = "banks-client", version = "=3.0.0" }
 solana-banks-interface = { path = "banks-interface", version = "=3.0.0" }
@@ -390,6 +396,7 @@ solana-big-mod-exp = "2.2.1"
 solana-bincode = "2.2.1"
 solana-blake3-hasher = "2.2.1"
 solana-bloom = { path = "bloom", version = "=3.0.0" }
+solana-bls = { path = "bls", version = "=2.3.0" }
 solana-bn254 = "2.2.2"
 solana-borsh = "2.2.1"
 solana-bpf-loader-program = { path = "programs/bpf_loader", version = "=3.0.0" }
