upgrade vote-program rev and rework certificate validation (#157)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -176,7 +176,7 @@ used_underscore_binding = "deny"
 
 [workspace.dependencies]
 Inflector = "0.11.4"
-alpenglow-vote = { git = "ssh://git@github.com/solana-program/alpenglow-vote.git", rev = "f5bbc58" }
+alpenglow-vote = { git = "https://github.com/solana-program/alpenglow-vote.git", rev = "c84cec6" }
 # alpenglow-vote = { path = "../alpenglow-vote/program" }
 aes-gcm-siv = "0.11.1"
 agave-banking-stage-ingress-types = { path = "banking-stage-ingress-types", version = "=3.0.0" }
