[curves] Add initial version of BLS syscalls (#152)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,8 @@ members = [
     "connection-cache",
     "core",
     "cost-model",
+    "curves/bls12-381",
+    "curves/curve-traits",
     "curves/curve25519",
     "dos",
     "download-utils",
@@ -397,6 +399,7 @@ solana-bincode = "2.2.1"
 solana-blake3-hasher = "2.2.1"
 solana-bloom = { path = "bloom", version = "=3.0.0" }
 solana-bls = { path = "bls", version = "=2.3.0" }
+solana-bls12-381 = { path = "curves/bls12-381", version = "=3.0.0" }
 solana-bn254 = "2.2.2"
 solana-borsh = "2.2.1"
 solana-bpf-loader-program = { path = "programs/bpf_loader", version = "=3.0.0" }
@@ -424,6 +427,7 @@ solana-connection-cache = { path = "connection-cache", version = "=3.0.0", defau
 solana-core = { path = "core", version = "=3.0.0" }
 solana-cost-model = { path = "cost-model", version = "=3.0.0" }
 solana-cpi = "2.2.1"
+solana-curve-traits = { path = "curves/curve-traits", version = "=3.0.0" }
 solana-curve25519 = { path = "curves/curve25519", version = "=3.0.0" }
 solana-define-syscall = "2.3.0"
 solana-derivation-path = "2.2.1"
