--- a/local-cluster/Cargo.toml
+++ b/local-cluster/Cargo.toml
@@ -16,6 +16,7 @@ targets = ["x86_64-unknown-linux-gnu"]
 dev-context-only-utils = []
 
 [dependencies]
+alpenglow-vote = { workspace = true }
 crossbeam-channel = { workspace = true }
 itertools = { workspace = true }
 log = { workspace = true }
