[bls] Update bls dependency to solana-sdk (#187)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,6 @@ members = [
     "bench-tps",
     "bench-vote",
     "bloom",
-    "bls",
     "bucket_map",
     "build-alpenglow-vote",
     "builtins",
@@ -398,7 +397,7 @@ solana-big-mod-exp = "2.2.1"
 solana-bincode = "2.2.1"
 solana-blake3-hasher = "2.2.1"
 solana-bloom = { path = "bloom", version = "=3.0.0" }
-solana-bls = { path = "bls", version = "=3.0.0" }
+solana-bls = { version = "0.1.0", git = "https://github.com/anza-xyz/solana-sdk", branch = "bls" } # TODO: update this when `solana-bls` crate is released and merged into master branch
 solana-bls12-381 = { path = "curves/bls12-381", version = "=3.0.0" }
 solana-bn254 = "2.2.2"
 solana-borsh = "2.2.1"
