--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -41,7 +41,9 @@ serde_json = { workspace = true }
 solana-account = "=2.2.1"
 solana-account-decoder = { workspace = true }
 solana-address-lookup-table-interface = { workspace = true }
-solana-borsh = "=2.2.1"
+solana-bls = { workspace = true, features = ["solana-signer-derive"] }
+solana-borsh = { workspace = true }
+solana-bpf-loader-program = { workspace = true }
 solana-clap-utils = { workspace = true }
 solana-cli-config = { workspace = true }
 solana-cli-output = { workspace = true }
