[core] Implement `AlpenglowVoteTransaction` and `VoteCertificate` traits for the new BLS message formats (#197)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -177,7 +177,7 @@ used_underscore_binding = "deny"
 
 [workspace.dependencies]
 Inflector = "0.11.4"
-alpenglow-vote = { git = "https://github.com/solana-program/alpenglow-vote.git", rev = "58cd654" }
+alpenglow-vote = { git = "https://github.com/solana-program/alpenglow-vote.git", rev = "21f0fa1" }
 # alpenglow-vote = { path = "../alpenglow-vote/program" }
 aes-gcm-siv = "0.11.1"
 agave-banking-stage-ingress-types = { path = "banking-stage-ingress-types", version = "=3.0.0" }
@@ -217,6 +217,7 @@ base64 = "0.22.1"
 bencher = "0.1.5"
 bincode = "1.3.3"
 bitflags = { version = "2.9.1" }
+bitvec = { version = "1.0.1", features = ["serde"] }
 blake3 = "1.8.2"
 blst = "0.3.14"
 blstrs = "0.7.1"
