Upgrade to `solana-signature` v2.3.0 and `solana-bls-signatures` (#254)
Co-authored-by: Wen <113942165+wen-coding@users.noreply.github.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -177,7 +177,7 @@ used_underscore_binding = "deny"
 
 [workspace.dependencies]
 Inflector = "0.11.4"
-alpenglow-vote = { git = "https://github.com/solana-program/alpenglow-vote.git", rev = "e5df52d", features = ["serde"] }
+alpenglow-vote = { git = "https://github.com/solana-program/alpenglow-vote.git", rev = "cdae90a", features = ["serde"] }
 aes-gcm-siv = "0.11.1"
 agave-banking-stage-ingress-types = { path = "banking-stage-ingress-types", version = "=3.0.0" }
 agave-cargo-registry = { path = "cargo-registry", version = "=3.0.0" }
@@ -397,7 +397,7 @@ solana-big-mod-exp = "2.2.1"
 solana-bincode = "2.2.1"
 solana-blake3-hasher = "2.2.1"
 solana-bloom = { path = "bloom", version = "=3.0.0" }
-solana-bls = { version = "0.1.1", git = "https://github.com/anza-xyz/solana-sdk", branch = "bls" } # TODO: update this when `solana-bls` crate is released and merged into master branch
+solana-bls-signatures = "=0.1.0"
 solana-bls12-381 = { path = "curves/bls12-381", version = "=3.0.0" }
 solana-bn254 = "2.2.2"
 solana-borsh = "2.2.1"
