--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -90,7 +90,7 @@ solana-account = { workspace = true }
 solana-account-info = { workspace = true }
 solana-accounts-db = { workspace = true }
 solana-address-lookup-table-interface = { workspace = true }
-solana-bls = { workspace = true, features = ["serde"] }
+solana-bls-signatures = { workspace = true, features = ["serde"] }
 solana-bpf-loader-program = { workspace = true }
 solana-bucket-map = { workspace = true }
 solana-build-alpenglow-vote = { workspace = true }
