--- a/test-validator/Cargo.toml
+++ b/test-validator/Cargo.toml
@@ -22,7 +22,7 @@ serde_derive = { workspace = true }
 serde_json = { workspace = true }
 solana-account = { workspace = true }
 solana-accounts-db = { workspace = true }
-solana-bls = { workspace = true }
+solana-bls-signatures = { workspace = true }
 solana-cli-output = { workspace = true }
 solana-clock = { workspace = true }
 solana-cluster-type = { workspace = true }
