--- a/zk-keygen/Cargo.toml
+++ b/zk-keygen/Cargo.toml
@@ -27,7 +27,7 @@ bs58 = { workspace = true }
 clap = { version = "3.1.5", features = ["cargo", "derive"] }
 dirs-next = { workspace = true }
 solana-clap-v3-utils = { workspace = true, features = ["elgamal"] }
-solana-bls = { workspace = true }
+solana-bls-signatures = { workspace = true }
 solana-remote-wallet = { workspace = true, features = ["default"] }
 solana-seed-derivable = "=2.2.1"
 solana-signer = "=2.2.1"
