--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -88,7 +88,7 @@ solana-accounts-db = { workspace = true }
 solana-address-lookup-table-interface = { workspace = true }
 solana-bincode = { workspace = true }
 solana-bloom = { workspace = true }
-solana-bls = { workspace = true }
+solana-bls-signatures = { workspace = true }
 solana-builtins-default-costs = { workspace = true }
 solana-client = { workspace = true }
 solana-clock = { workspace = true }
