--- a/keygen/Cargo.toml
+++ b/keygen/Cargo.toml
@@ -17,11 +17,13 @@ name = "solana-keygen"
 path = "src/keygen.rs"
 
 [dependencies]
+alpenglow-vote = { workspace = true }
 bs58 = { workspace = true }
 clap = { version = "3.1.5", features = ["cargo"] }
 dirs-next = { workspace = true }
 num_cpus = { workspace = true }
 serde_json = { workspace = true }
+solana-bls-signatures = { workspace = true, features = ["solana-signer-derive"] }
 solana-clap-v3-utils = { workspace = true }
 solana-cli-config = { workspace = true }
 solana-derivation-path = "=2.2.1"
