--- a/ledger/Cargo.toml
+++ b/ledger/Cargo.toml
@@ -28,6 +28,7 @@ frozen-abi = [
 agave-feature-set = { workspace = true }
 agave-reserved-account-keys = { workspace = true }
 anyhow = { workspace = true }
+alpenglow-vote = { workspace = true }
 assert_matches = { workspace = true }
 bincode = { workspace = true }
 bitflags = { workspace = true, features = ["serde"] }
