refactor: move core::alpenglow_consensus -> votor crate (#261)

--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -167,6 +167,7 @@ solana-validator-exit = { workspace = true }
 solana-version = { workspace = true }
 solana-vote = { workspace = true }
 solana-vote-program = { workspace = true }
+solana-votor = { workspace = true }
 solana-wen-restart = { workspace = true }
 static_assertions = { workspace = true }
 strum = { workspace = true, features = ["derive"] }
