--- a/votor/Cargo.toml
+++ b/votor/Cargo.toml
@@ -71,6 +71,7 @@ solana-vote-program = { workspace = true }
 thiserror = { workspace = true }
 
 [dev-dependencies]
+solana-runtime = { workspace = true, features = ["dev-context-only-utils"] }
 test-case = { workspace = true }
 
 [lints]
