Rate limit accept

--- a/streamer/Cargo.toml
+++ b/streamer/Cargo.toml
@@ -39,6 +39,7 @@ pem = { workspace = true }
 percentage = { workspace = true }
 quinn = { workspace = true }
 quinn-proto = { workspace = true }
+quanta = { workspace = true }
 rand = { workspace = true }
 rustls = { workspace = true }
 smallvec = { workspace = true }
