--- a/Cargo.toml
+++ b/Cargo.toml
@@ -338,6 +338,7 @@ qstring = "0.7.2"
 qualifier_attr = { version = "0.2.2", default-features = false }
 quinn = "0.11.8"
 quinn-proto = "0.11.12"
+quanta = "0.12.0"
 quote = "1.0"
 rand = "0.8.5"
 rand0-7 = { package = "rand", version = "0.7" }
