--- a/programs/stake/Cargo.toml
+++ b/programs/stake/Cargo.toml
@@ -38,6 +38,7 @@ solana-stake-interface = { workspace = true }
 solana-sysvar = { workspace = true }
 solana-transaction-context = { workspace = true, features = ["bincode"] }
 solana-type-overrides = { workspace = true }
+solana-vote = { workspace = true }
 solana-vote-interface = { workspace = true, features = ["bincode"] }
 
 [dev-dependencies]
