--- a/runtime-transaction/Cargo.toml
+++ b/runtime-transaction/Cargo.toml
@@ -21,7 +21,6 @@ dev-context-only-utils = ["solana-compute-budget-instruction/dev-context-only-ut
 
 [dependencies]
 agave-transaction-view = { workspace = true }
-alpenglow-vote = { workspace = true }
 log = { workspace = true }
 solana-compute-budget = { workspace = true }
 solana-compute-budget-instruction = { workspace = true }
@@ -33,6 +32,7 @@ solana-signature = { workspace = true }
 solana-svm-transaction = { workspace = true }
 solana-transaction = { workspace = true }
 solana-transaction-error = { workspace = true }
+solana-vote = { workspace = true }
 thiserror = { workspace = true }
 
 [dev-dependencies]
