refactor: introducing votor-messages crate (#328)

--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -100,7 +100,8 @@ solana-udp-client = { workspace = true }
 solana-version = { workspace = true }
 solana-vote = { workspace = true }
 solana-vote-program = { workspace = true }
-spl-memo = { version = "=6.0.0", features = ["no-entrypoint"] }
+solana-votor-messages = { workspace = true }
+spl-memo = { workspace = true, features = ["no-entrypoint"] }
 thiserror = { workspace = true }
 tiny-bip39 = { workspace = true }
 
