--- a/vote/Cargo.toml
+++ b/vote/Cargo.toml
@@ -56,6 +56,7 @@ solana-system-interface = { workspace = true }
 solana-svm-transaction = { workspace = true }
 solana-transaction = { workspace = true, features = ["bincode"] }
 solana-vote-interface = { workspace = true, features = ["bincode"] }
+solana-votor-messages = { workspace = true }
 spl-pod = { workspace = true }
 thiserror = { workspace = true }
 
