--- a/votor/Cargo.toml
+++ b/votor/Cargo.toml
@@ -66,6 +66,7 @@ solana-time-utils = { workspace = true }
 solana-transaction = { workspace = true }
 solana-vote = { workspace = true }
 solana-vote-program = { workspace = true }
+solana-votor-messages = { workspace = true }
 thiserror = { workspace = true }
 
 [dev-dependencies]
