--- a/Cargo.toml
+++ b/Cargo.toml
@@ -140,6 +140,7 @@ members = [
     "vortexor",
     "vote",
     "votor",
+    "votor-messages",
     "watchtower",
     "wen-restart",
     "xdp",
@@ -574,6 +575,7 @@ solana-vote = { path = "vote", version = "=3.0.0" }
 solana-vote-interface = "2.2.6"
 solana-vote-program = { path = "programs/vote", version = "=3.0.0", default-features = false }
 solana-votor = { path = "votor", version = "=3.0.0" }
+solana-votor-messages = { path = "votor-messages", version = "=3.0.0" }
 solana-wen-restart = { path = "wen-restart", version = "=3.0.0" }
 solana-zk-elgamal-proof-program = { path = "programs/zk-elgamal-proof", version = "=3.0.0" }
 solana-zk-keygen = { path = "zk-keygen", version = "=3.0.0" }
