--- a/keygen/Cargo.toml
+++ b/keygen/Cargo.toml
@@ -36,6 +36,7 @@ solana-seed-derivable = "=2.2.1"
 solana-signer = "=2.2.1"
 solana-version = { workspace = true }
 solana-vote = { workspace = true }
+solana-votor-messages = { workspace = true }
 tiny-bip39 = { workspace = true }
 
 [dev-dependencies]
