--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -176,6 +176,7 @@ solana-vote = { workspace = true }
 solana-vote-interface = { workspace = true }
 solana-vote-program = { workspace = true }
 spl-generic-token = { workspace = true }
+solana-votor-messages = { workspace = true }
 static_assertions = { workspace = true }
 strum = { workspace = true, features = ["derive"] }
 strum_macros = { workspace = true }
