--- a/Cargo.toml
+++ b/Cargo.toml
@@ -336,8 +336,8 @@ prost-types = "0.11.9"
 protobuf-src = "1.1.0"
 qstring = "0.7.2"
 qualifier_attr = { version = "0.2.2", default-features = false }
-quinn = "0.11.8"
-quinn-proto = "0.11.12"
+quinn = { git = "https://github.com/lijunwangs/quinn.git", rev = "a02eba4db790c7a3645b6c8ae2f745cd37898e0e" }
+quinn-proto = { git = "https://github.com/lijunwangs/quinn.git", rev = "a02eba4db790c7a3645b6c8ae2f745cd37898e0e" }
 quanta = "0.12.0"
 quote = "1.0"
 rand = "0.8.5"
