--- a/Cargo.toml
+++ b/Cargo.toml
@@ -179,7 +179,6 @@ used_underscore_binding = "deny"
 
 [workspace.dependencies]
 Inflector = "0.11.4"
-alpenglow-vote = { git = "https://github.com/solana-program/alpenglow-vote.git", rev = "cdae90a", features = ["serde"] }
 aes-gcm-siv = "0.11.1"
 agave-banking-stage-ingress-types = { path = "banking-stage-ingress-types", version = "=3.0.0" }
 agave-cargo-registry = { path = "cargo-registry", version = "=3.0.0" }
@@ -194,6 +193,7 @@ agave-transaction-view = { path = "transaction-view", version = "=3.0.0" }
 agave-verified-packet-receiver = { path = "verified-packet-receiver", version = "=3.0.0" }
 agave-xdp = { path = "xdp", version = "=3.0.0" }
 ahash = "0.8.11"
+alpenglow-vote = { git = "https://github.com/solana-program/alpenglow-vote.git", rev = "cdae90a", features = ["serde"] }
 anyhow = "1.0.98"
 aquamarine = "0.6.0"
 arbitrary = "1.4.1"
@@ -269,8 +269,8 @@ env_logger = "0.11.8"
 etcd-client = "0.11.1"
 fast-math = "0.1"
 fd-lock = "3.0.13"
-five8_const = "0.1.4"
 ff = "0.13.1"
+five8_const = "0.1.4"
 flate2 = "1.0.31"
 fnv = "1.0.7"
 fs_extra = "1.3.0"
@@ -399,7 +399,7 @@ solana-big-mod-exp = "2.2.1"
 solana-bincode = "2.2.1"
 solana-blake3-hasher = "2.2.1"
 solana-bloom = { path = "bloom", version = "=3.0.0" }
-solana-bls-signatures = "=0.1.0"
+solana-bls-signatures = { version = "0.1.0", features = ["serde"] }
 solana-bls12-381 = { path = "curves/bls12-381", version = "=3.0.0" }
 solana-bn254 = "2.2.2"
 solana-borsh = "2.2.1"
