feat: Updates timers to send Crashed leader and timeout events (#344)
Part of #243.

    Rename SkipTimer to TimerManager as now the timers are not just for skip but also for crashed leaders.
    Refactors the core state machine of sending out different types of events out of the main loop of the timers.
    Sends out additional crashed leader events on top of skip events.

Co-authored-by: Quentin Kniep <hello@quentinkniep.com>

--- a/votor/Cargo.toml
+++ b/votor/Cargo.toml
@@ -33,6 +33,7 @@ dashmap = { workspace = true, features = ["rayon", "raw-api"] }
 etcd-client = { workspace = true, features = ["tls"] }
 itertools = { workspace = true }
 log = { workspace = true }
+parking_lot = { workspace = true }
 qualifier_attr = { workspace = true }
 rayon = { workspace = true }
 serde = { workspace = true }
