--- a/tps-client/Cargo.toml
+++ b/tps-client/Cargo.toml
@@ -28,6 +28,7 @@ solana-epoch-info = { workspace = true }
 solana-hash = { workspace = true }
 solana-keypair = { workspace = true }
 solana-message = { workspace = true }
+solana-net-utils = { workspace = true }
 solana-pubkey = { workspace = true }
 solana-quic-client = { workspace = true }
 solana-rpc-client = { workspace = true }
