--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -33,7 +33,7 @@ solana-instruction = { workspace = true }
 solana-keypair = { workspace = true }
 solana-measure = { workspace = true }
 solana-message = { workspace = true }
-solana-net-utils = { workspace = true, features = ["dev-context-only-utils"] }
+solana-net-utils = { workspace = true }
 solana-pubkey = { workspace = true }
 solana-pubsub-client = { workspace = true }
 solana-quic-client = { workspace = true }
