[core] add bls sigverifier logic (#430)
#### Summary of Changes
First attempt at the BLS sigverifier logic. The implementation does
leave some room for better optimization, but I think this can be a good
start.

The `verify_batches` is the main function that does verifies packet
signatures.
1. It first goes through the packets, deserializes them, and groups them
into simple votes or certificates
2. It then verifies the batch of votes and certificates separately

The `verify_votes` function verifies the batch of votes.
1. It organizes the BLS public keys, signatures, and messages so that we
can invoke the `par_verify_distinct`, which optimistically verifies the
signatures in a batch.
2. It invokes `par_verify_distinct`
3. If the `par_verify_distinct` fails, then it individually verifies the
packets

The `verify_certificate` function verifies the batch of certifies.
1. It first deserializes the bit vec, either resulting in a base2
encoding or base3
2. If base2 encoding, it simply constructs the aggregate BLS public key
and verifies the cert
3. If base3 encoding, then it constructs two aggregate BLS public keys.
Constructs messages to verify, and then invokes `par_verify_distinct`.

Fixes #
<!-- OPTIONAL: Feature Gate Issue: # -->
<!-- Don't forget to add the "feature-gate" label -->

--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -88,7 +88,7 @@ solana-accounts-db = { workspace = true }
 solana-address-lookup-table-interface = { workspace = true }
 solana-bincode = { workspace = true }
 solana-bloom = { workspace = true }
-solana-bls-signatures = { workspace = true }
+solana-bls-signatures = { workspace = true, features = ["parallel"] }
 solana-builtins-default-costs = { workspace = true }
 solana-client = { workspace = true }
 solana-clock = { workspace = true }
@@ -146,6 +146,7 @@ solana-short-vec = { workspace = true }
 solana-shred-version = { workspace = true }
 solana-signature = { workspace = true }
 solana-signer = { workspace = true }
+solana-signer-store = { workspace = true }
 solana-slot-hashes = { workspace = true }
 solana-slot-history = { workspace = true }
 solana-streamer = { workspace = true }
@@ -226,7 +227,10 @@ name = "banking_stage"
 name = "gen_keys"
 
 [[bench]]
-name = "sigverify_stage"
+name = "ed25519_sigverify"
+
+[[bench]]
+name = "bls_sigverify"
 
 [[bench]]
 name = "receive_and_buffer"
