Sort transactions by priority

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,6 +51,7 @@ members = [
     "ledger-tool",
     "local-cluster",
     "low-pass-filter",
+    "mcp/mcp-reconstruction",
     "measure",
     "memory-management",
     "merkle-tree",
