migration: update migration api to be a state machine (#573)
#### Problem
Migration API is a bit hard to follow

#### Summary of Changes
Make it a state machine and add a ton of comments
Update callers
Use the off curve account to store the genesis certificate instead of
polluting bank fields

--- a/votor-messages/Cargo.toml
+++ b/votor-messages/Cargo.toml
@@ -19,6 +19,7 @@ frozen-abi = [
 dev-context-only-utils = []
 
 [dependencies]
+agave-feature-set = { workspace = true }
 bitvec = { workspace = true }
 bytemuck = { workspace = true }
 log = { workspace = true }
@@ -29,6 +30,7 @@ solana-bls-signatures = { workspace = true, features = [
     "bytemuck", "solana-signer-derive",
 ] }
 solana-clock = { workspace = true }
+solana-epoch-schedule = { workspace = true }
 solana-frozen-abi = { workspace = true, optional = true, features = [
     "frozen-abi",
 ] }
