Initial framework for mcp

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -53,6 +53,7 @@ members = [
     "ledger-tool",
     "local-cluster",
     "low-pass-filter",
+    "mcp",
     "measure",
     "memory-management",
     "merkle-tree",
