Wip MCP framework

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -53,7 +53,14 @@ members = [
     "ledger-tool",
     "local-cluster",
     "low-pass-filter",
-    "mcp",
+    "mcp/crates/mcp-types",
+    "mcp/crates/mcp-wire",
+    "mcp/crates/mcp-crypto-vc",
+    "mcp/crates/mcp-hecc-mock",
+    "mcp/crates/mcp-blockstore",
+    "mcp/crates/mcp-reconstructor",
+    "mcp/crates/mcp-stage",
+    "mcp/crates/mcp-node",  
     "measure",
     "memory-management",
     "merkle-tree",
