--- a/Cargo.toml
+++ b/Cargo.toml
@@ -56,6 +56,7 @@ members = [
     "mcp/crates/mcp-types",
     "mcp/crates/mcp-wire",
     "mcp/crates/mcp-crypto-vc",
+    "mcp/crates/mcp-crypto-te",
     "mcp/crates/mcp-hecc-mock",
     "mcp/crates/mcp-blockstore",
     "mcp/crates/mcp-reconstructor",
